--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             <label><input type="checkbox" id="invert-x-check"> Invert X-Axis</label>
         </div>
         <div>
+            <label><input type="checkbox" id="observer-view-check"> Observer View</label>
+        </div>
+        <div>
             <select id="model-select">
                 <option value="">Loading...</option>
             </select>
@@ -43,7 +46,7 @@
         <div><button id="calibrate-btn">Reset Center</button></div>
     </div>
 
-    <script type="module" src="script.js?v=2"></script>
+    <script type="module" src="script.js?v=4"></script>
 </body>
 
 </html>
