--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div><button id="calibrate-btn">Reset Center</button></div>
     </div>
 
-    <script type="module" src="script.js?v=4"></script>
+    <script type="module" src="src/main.js?v=1"></script>
 </body>
 
 </html>
